--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@
 
   margin: 0;
   padding: 0;
-  min-height: 100vh;
+
 }
 
 *{
@@ -27,7 +27,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  min-height: 100vh;
 
 }
 
@@ -37,7 +36,7 @@
   justify-content: center;
   align-items: center;
   padding: 0 1rem;
-  height: 3rem;
+
   background-color: #2424241d;
   color: rgba(255, 255, 255, 0.87);
   min-width: 100lvw;
@@ -45,10 +44,12 @@
 
 .header{
   border-bottom: 1px solid rgba(255, 255, 255, 0.12);
+  height: 3rem;
 }
 
-.footer{
+.footer{;
   border-top: 1px solid rgba(255, 255, 255, 0.12);
+  height: 3rem;
 }
 
 .element {
@@ -56,4 +57,8 @@
   justify-content: flex-start;
   flex-grow: 1;
   padding: 1rem 0;
+}
+
+.comment {
+  margin: .25rem;
 }
